# airgn

./: .gitignore  README.md  ampel_config.yml  ampel_config_311.yml  oosterschelde.env  pyproject.toml
airgn/: plot_chi2.py  rejection_sampling.py  simulate_mags_vs_flux.py
airgn/ampel/alert/load/: TimewiseAlertSimulator.py
airgn/ampel/t2/: T2CalculateChi2.py  T2CalculateChi2Stacked.py  T2CalculateMedians.py
airgn/ampel/t3/: PlotAllWISEvsNEOWISE.py  PlotChi2Distribution.py
airgn/desi/: agn_value_added_catalog.py  desi_agn_value_added_catalog.yml  desi_agn_value_added_catalog_ampel_job.yml  desi_targetphot_feets.yml  feets_bright.yml  import_input.py  targetphot.py  test_var_metrics.yml  test_var_metrics_bright.yml
airgn/legacy_survey/: download.py  ls_lsst_coverage.py  sweep0.py  sweep0.yml  sweep0_ampel_job.yml  sweep0_dr10_ls_data_ampel_job_new.yml  sweep0_ls_data_ampel_job.yml  util.py
airgn/milliquas/: milliquas.py  milliquas.yml  milliquas_ampel_job.yml  milliquas_ampel_job_.yml  plot_milliquas_chi2.py  run_milliquas.py
airgn/ned_lvs/: nedlvs.py  nedlvs.yml  nedlvs_ampel_job.yml
airgn/simulate/: simulate_steady.yml  simulate_steady_few_single_exposures.yml
ampel/airgn/t2/: T2CalculateChi2.py  T2CalculateChi2Stacked.py  T2CalculateMedians.py  T2CalculateVarMetrics.py  T2FeetsBase.py  T2FeetsTimewise.py
ampel/airgn/t3/: AGNVarXGB.py  Chi2VsAGN.py  FeetsOfAGN.py  NPointsVarMetricsAggregator.py  PlotAllWISEvsNEOWISE.py  PlotChi2Distribution.py  VarMetricsVsAGN.py  metric_params.csv
ampel/legacy_survey/: CompareTimewiseToLegacySurvey.py  LegacySurveyBrickDESITargetIDLoader.py  LegacySurveyBrickLoader.py  LegacySurveyDESITargetIDLoader.py  LegacySurveyDESITargetPhotLoader.py  LegacySurveyDatapointShaper.py  LegacySurveySupplier.py  LegacySurveyWISEFilter.py  T2MaggyToFluxDensity.py
ampel/util/: NPointsIterator.py
conf/: ampel.yml
(+2 files in other folders)
