[project]
name = "airgn"
version = "0.1.0"
description = ""
authors = [
    {name = "Jannis Necker",email = "jannis.necker@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "timewise[ampel,dev] (==1.0.0a7)",
    "jupyterlab (>=4.4.6,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
timewise = {develop = true}
ampel-core = {develop = true}
