[project]
name = "airgn"
version = "0.1.0"
description = ""
authors = [
    {name = "Jannis Necker",email = "jannis.necker@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "timewise[ampel,dev]  @ file:///home/necker/Software/timewise",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "wget (>=3.2,<4.0)",
    "rubin-sim (>=2.6.0,<3.0.0)",
    "ligo-skymap (>=2.5.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "umap-learn (>=0.5.11,<0.6.0)",
    "coverage (>=7.0.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
ignore = ["F401"]
